Revert "prevent background scroll on mobile"
This reverts commit 02e244b5bd171dd3a6ba41c19dc7e85fe92df52f.

--- a/css/main.scss
+++ b/css/main.scss
@@ -11,7 +11,6 @@ div,
 ul {
   margin: 0;
   padding: 0;
-  position: relative;
 }
 
 #title {
